[package]
name = "protohackers"
version = "0.1.0"
edition = "2021"

[lib]
name = "threadpool"
path = "src/threadpool.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "smoke_test"
path = "src/bin/smoke_test.rs"

[[bin]]
name = "prime_time"
path = "src/bin/prime_time.rs"

[[bin]]
name = "means_to_an_end"
path = "src/bin/means_to_an_end.rs"

[[bin]]
name = "budget_chat"
path = "src/bin/budget_chat.rs"

[[bin]]
name = "unusual_db"
path = "src/bin/unusual_db.rs"

[[bin]]
name = "mob_in_the_middle"
path = "src/bin/mob_in_the_middle.rs"

[[bin]]
name = "speed_deamon"
path = "src/bin/speed_deamon.rs"

[[bin]]
name = "line_reversal"
path = "src/bin/line_reversal.rs"

[dependencies]
serde_json = "1.0.103"
serde = { version = "1.0.174", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
